src/test/ui/range/range_traits-2.rs
use std::ops::*;

#[derive(Copy, Clone)] //~ ERROR Copy
struct R(Range<usize>);

fn main() {}
